--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <p><b>Phone:</b> +91 8866993557
                                 <br><b>E-mail:</b> varunsahni0910@gmail.com
                                 <br><b>Linkedin:</b> www.linkedin.com/in/varunsahni0910</p>
-                            <a href="19030141059.pdf" class="button js-scroll">Download my CV</a>
+                            <a href="VARUN CV.pdf" class="button js-scroll">Download my CV</a>
                         </div>
                     </div>
                 </div>
