--- a/index.html
+++ b/index.html
@@ -552,8 +552,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
                   <h2 style="text-align:center;">Collabera Technologies Private Limited, Vadodara</h2>
-                  <h3 style="color:red; text-align:center;"  >Technical Recruiter <span>&bull;</span> <em class="date">March 2021 - Present</em></h3>
-
+                  <h3 style="color:red; text-align:center;"  >Technical Recruiter <span>&bull;</span> <em class="date">March 2021 - August 2021</em></h3>
+ <h3 style="color:red; text-align:center;"  >Executive Candidate Screening <span>&bull;</span> <em class="date">August 2021 - Present</em></h3>
  
 
                
