--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<!-- skill item --
 						<div class="skill-item">
 							<div class="skill-info clearfix">
-								<h4 class="float-left mb-3 mt-0">jQuery</h4>
+								<h4 class="float-left mb-3 mt-0">Python</h4>
 								<span class="float-right">95%</span>
 							</div>
 							<div class="progress">
@@ -218,7 +218,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<!-- skill item --
 						<div class="skill-item">
 							<div class="skill-info clearfix">
-								<h4 class="float-left mb-3 mt-0">Adobe Illustrator</h4>
+								<h4 class="float-left mb-3 mt-0">Data Science using Python</h4>
 								<span class="float-right">70%</span>
 							</div>
 							<div class="progress">
@@ -231,7 +231,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<!-- skill item --
 						<div class="skill-item">
 							<div class="skill-info clearfix">
-								<h4 class="float-left mb-3 mt-0">Adobe Premiere Pro</h4>
+								<h4 class="float-left mb-3 mt-0">PHP</h4>
 								<span class="float-right">90%</span>
 							</div>
 							<div class="progress">
