--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<!-- skill item -->
 						<div class="skill-item">
 							<div class="skill-info clearfix">
-								<h4 class="float-left mb-3 mt-0">jQuery</h4>
+								<h4 class="float-left mb-3 mt-0">Python</h4>
 								<span class="float-right">95%</span>
 							</div>
 							<div class="progress">
@@ -313,7 +313,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<!-- skill item -->
 						<div class="skill-item">
 							<div class="skill-info clearfix">
-								<h4 class="float-left mb-3 mt-0">Adobe Illustrator</h4>
+								<h4 class="float-left mb-3 mt-0">Data Science using Python</h4>
 								<span class="float-right">70%</span>
 							</div>
 							<div class="progress">
@@ -326,7 +326,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<!-- skill item -->
 						<div class="skill-item">
 							<div class="skill-info clearfix">
-								<h4 class="float-left mb-3 mt-0">Adobe Premiere Pro</h4>
+								<h4 class="float-left mb-3 mt-0">PHP</h4>
 								<span class="float-right">90%</span>
 							</div>
 							<div class="progress">
