--- a/index.html
+++ b/index.html
@@ -861,6 +861,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                             </a>
                         </div>	
+					<div class="col-lg-4 col-md-6 project-grid-item all branding webdesig photographyn">
+					          <a class="popup-img project-item" href="assets/img/projects/react.jpg"> <img src="assets/img/projects/react.jpg" alt="img">
+                                <div class="project-img-overlay">
+                                    <div class="project-content">
+                                        <h4>React + Redux</h4>
+                                        <h6>View Certificate</h6>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>	
 					
 				</div>
 			</div>
