--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <p>&copy; 2021</p>
+                            <p>Designed and Developed by Varun Sahni &copy; 2022</p>
           
                         </div>
                     </div>
