--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="skill-item">
 							<div class="skill-info clearfix">
 								<h4 class="float-left mb-3 mt-0">Python</h4>
-								<span class="float-right">95%</span>
+								<span class="float-right">90%</span>
 							</div>
 							<div class="progress">
-								<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="95">
+								<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90">
 								</div>
 							</div>
 						</div>
@@ -553,7 +553,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                   <h2 style="text-align:center;">Collabera Technologies Private Limited, Vadodara</h2>
                   <h3 style="color:red; text-align:center;"  >Technical Recruiter <span>&bull;</span> <em class="date">March 2021 - August 2021</em></h3>
- <h3 style="color:red; text-align:center;"  >Executive Candidate Screening <span>&bull;</span> <em class="date">August 2021 - Present</em></h3>
+ <h3 style="color:red; text-align:center;"  >Technical Screening Executive <span>&bull;</span> <em class="date">August 2021 - Present</em></h3>
  
 
                
