--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 
                    <h2 style="text-align:center;">Symbiosis Institute of Computer Studies and Research (SICSR) , Pune</h2>
                   <h3 style="color:red; text-align:center;"  >Master of Business Admistration (Information Technology) <span>&bull;</span> <em class="date">2019-2021</em></h3>
-                  <p> Specialization in <b> Data Analytics. </b></p>
+                  <p> Specialization in <b> Data Analytics. <br>
+			  Completed with 7.00 CGPA</b></p>
                                 </div>
                             </div>
                         </div>
