--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                  <h2>Maharaja Sayajirao University , Vadodara</h2>
                   <h3  style="color:red;">Bachlore of Computer Application <span>&bull;</span> <em class="date">2016-2019</em></h3>
-                  <p> Completed With "Grade D".</p>
+                  <span> &bull; </span> <p> Completed With "Grade D".</p>
 
  
 
