--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
      <link rel="shortcut icon" href="favicon.ico">
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics --
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170962444-1"></script>
 <script>
 
@@ -33,7 +33,17 @@
 
   ga('create', 'UA-170962444-1', 'auto');
   ga('send', 'pageview');
+</script>-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170962444-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170962444-1');
 </script>
+
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
