--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                <p>I'm a web designer and front-end developer with a passion for learning.</p>
                             <p>I help your business and individuals by developing websites. I build websites to make you successful in the long term. Advance knlowledege about <span class="element" data-text1="web designing." data-text2="front end developing." data-text3="PHP Web Developement." data-loop="true" data-backdelay="1500"></span></p>
                             <a href="#contact" class="button js-scroll">Get in Touch</a>
+				<a href="https://github.com/varun-sahni" class="button js-scroll">GitHub</a>
                     <div class="container">
                     
                        <!--<a href="www.facebook.com/varunsahni.965"><i class="button fa fa-facebook"></i>  </a>--
