--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="nav-item"> <a class="nav-link js-scroll" href="#project">Project</a></li>
                         <li class="nav-item"> <a class="nav-link js-scroll" href="#review">Certificate</a></li>
                         <li class="nav-item"> <a class="nav-link js-scroll" href="#contact">Contact</a></li>
-			  <li class="nav-item">  <a href="https://github.com/varun-sahni" class="button js-scroll">GitHub</a></li>
+			  <li class="nav-item">  <a href="https://github.com/varun-sahni" class="nav-link js-scroll" style="color:red;">GitHub</a></li>
                     </ul>
                 </div>
             </div>
