--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 skill-box">
-						<!- skill item --
+						<!- skill ite --
 						<div class="skill-item">
 							<div class="skill-info clearfix">
 								<h4 class="float-left mb-3 mt-0">HTML & CSS</h4>
