--- a/index.html
+++ b/index.html
@@ -993,6 +993,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </a>
                         </div>
 					
+						<div class="col-lg-4 col-md-6 project-grid-item all branding webdesig photographyn">
+					          <a class="popup-img project-item" href="assets/img/projects/Google_Analytics.JPG"> <img src="assets/img/projects/Google_Analytics.JPG" alt="img">
+                                <div class="project-img-overlay">
+                                    <div class="project-content">
+                                        <h4>Google Analytics by Great Learning</h4>
+                                        <h6>View Certificate</h6>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+					
 				</div>
 			</div>
 		</section>
