--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					          <a class="popup-img project-item" href="assets/img/projects/Google_Analytics.JPG"> <img src="assets/img/projects/Google_Analytics.JPG" alt="img">
                                 <div class="project-img-overlay">
                                     <div class="project-content">
-                                        <h4>Google Analytics by Great Learning</h4>
+                                        <h4>Google Analytics</h4>
                                         <h6>View Certificate</h6>
                                     </div>
                                 </div>
@@ -1008,7 +1008,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					          <a class="popup-img project-item" href="assets/img/projects/Leadership.JPG"> <img src="assets/img/projects/Leadership.JPG" alt="img">
                                 <div class="project-img-overlay">
                                     <div class="project-content">
-                                        <h4>Leadership and Management by Great Learning</h4>
+                                        <h4>Leadership and Management</h4>
                                         <h6>View Certificate</h6>
                                     </div>
                                 </div>
